--- a/src/app/voguemine-admin/admin.module.css
+++ b/src/app/voguemine-admin/admin.module.css
@@ -146,6 +146,7 @@ color: black;
     outline: none;
     padding: 0 5px;
     background-color: transparent;
+    color:black;
 
 }
 .admin .adminBody .adminLeft .search button{
