--- a/src/app/collections/[cid]/collections.module.css
+++ b/src/app/collections/[cid]/collections.module.css
@@ -2,6 +2,7 @@
     margin: 70px 8vw;
     font-family: var(--primary-font);
     color: black;
+    background-color:white;
 }
 .collections h1{
     text-align: center;
