--- a/src/app/flash-offers/offers.module.css
+++ b/src/app/flash-offers/offers.module.css
@@ -7,7 +7,7 @@
 .collections h1{
     text-align: center;
     font-weight: 800;
-    color: #d2b188;
+    color: rgb(120, 16, 255);
     margin-bottom: 20px;
 }
 .sortBtn{
@@ -20,7 +20,7 @@
     z-index: 5;
 }
 .sortBtn p{
-    background-color: #d2b188;
+    background-color: rgb(120, 16, 255);
     padding: 10px 20px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -98,12 +98,12 @@ cursor: pointer;
 }
 .collections .collectionProducts .sort .sortBtns button:nth-child(1){
     background-color: transparent;
-    border: 1px solid #d2b188;
-    color: #d2b188;
+    border: 1px solid rgb(120, 16, 255);
+    color: rgb(120, 16, 255);
 }
 .collections .collectionProducts .sort .sortBtns button:nth-child(2){
-    background-color: #d2b188;
-    border: 1px solid #d2b188;
+    background-color: rgb(120, 16, 255);
+    border: 1px solid rgb(120, 16, 255);
     color: white;
 }
 .collections .collectionProducts .sort .sortBy{
@@ -116,15 +116,15 @@ cursor: pointer;
     outline: none;
     font-weight: 500;
     letter-spacing: 1px;
-    color: #d2b188;
-    border-color: #d2b188;
+    color: rgb(120, 16, 255);
+    border-color: rgb(120, 16, 255);
     background-color: white;
 
 
 }
 .collections .collectionProducts .sort .sortBy select option{
     font-weight: 600;
-    color: #d2b188;
+    color: rgb(120, 16, 255);
 
 }
 .collections .collectionProducts .sort .chooseBrand{
@@ -179,7 +179,7 @@ cursor: pointer;
 }.collections .noData button{
     width: 120px;
     padding: 8px;
-    background-color: #d2b188;
+    background-color: rgb(120, 16, 255);
     color: white;
     border: none;
     cursor: pointer;
@@ -187,7 +187,7 @@ cursor: pointer;
     font-size: 17px;
 }
 .collections .collectionPrdts .allPrdts .collectionPrdt{
-    border: 1px solid #d2b188;
+    border: 1px solid rgb(120, 16, 255);
     padding: 5px;
     border-radius: 3px;
     background-color: white;
@@ -239,7 +239,7 @@ cursor: pointer;
     overflow: hidden;
     text-overflow: ellipsis;
     height: 2.4em; 
-    color: #d2b188;
+    color: rgb(120, 16, 255);
 }
 .collections .collectionPrdts .allPrdts .collectionPrdt .prdtInfo .prdtSku{
     margin-top: 5px;
@@ -283,8 +283,8 @@ cursor: pointer;
     cursor: pointer;
     border-radius: 2px;
     transition: all 0.3s;
-    background-color: #d2b188;
-    border: 1px solid #d2b188;
+    background-color: rgb(120, 16, 255);
+    border: 1px solid rgb(120, 16, 255);
     color: white;
     border-radius: 5px;
 
