--- a/src/app/category.module.css
+++ b/src/app/category.module.css
@@ -88,8 +88,12 @@ padding: 5px;
 border-radius: 5px;
 background-color: white;
 text-align: center;
+transition: all 0.3s ease-in-out;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 
+}
+.category .categoryList .cate:hover{
+    scale: 0.97;
 }
 .category .categoryList .cate img{
     width: 100%;
