--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,36 @@ a {
   color: inherit;
   text-decoration: none;
 }
+.loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  position: fixed;
+  top: 55px;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 55px);
+  z-index: 10;
+}
+@keyframes loaidngImg {
+  0%{
+    opacity: 0.8;
+  }
+  50%{
+    opacity: 0.4;
+
+  }
+  100%{
+    opacity: 0.8;
+
+  }
+}
+.loading img{
+  width: 250px;
+  height: auto;
+  animation: loaidngImg 0.5s linear infinite;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
