--- a/components/admin/products/prdts.module.css
+++ b/components/admin/products/prdts.module.css
@@ -1,5 +1,5 @@
 .products{
-    padding:5px 10px;
+    padding:0 10px;
 }
 .products .addprdt{
     position: fixed;
@@ -83,7 +83,7 @@ color: white;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-gap: 10px;
-    height: 90vh;
+    height: auto;
     overflow-y: scroll;
 
 }
