--- a/src/app/voguemine-admin/admin.module.css
+++ b/src/app/voguemine-admin/admin.module.css
@@ -10,6 +10,23 @@
     color: black;
 
 }
+.admin .bell{
+    position: relative;
+}
+.admin .bell span{
+    position: absolute;
+    top: -2px;
+    right: -4px;
+    width: 17px;
+    height: 17px;
+    background-color: #d2b188;
+    color: white;
+    border-radius: 50%;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+}
 .admin .loginPage{
     width: 100%;
     height: 100vh;
