--- a/components/admin/home/home.module.css
+++ b/components/admin/home/home.module.css
@@ -133,7 +133,7 @@
 .home .bottom .chart{
     margin: 50px 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     justify-content: space-between;
 }
