--- a/src/app/home/home.module.css
+++ b/src/app/home/home.module.css
@@ -92,6 +92,14 @@ margin-top: 55px;
     font-size: 18px;
     margin: 10px 0;
     color: black;
+    display: flex;
+    align-items: center;
+}
+.home .productsGrid .prdt .info .productPrice span:nth-child(2){
+font-size: 12px;
+color: rgb(168, 168, 168);
+text-decoration: line-through;
+margin-left: 1rem;
 }
 .home .productsGrid .prdt .info button{
     border: none;
