--- a/src/app/collections/[cid]/collections.module.css
+++ b/src/app/collections/[cid]/collections.module.css
@@ -341,7 +341,9 @@
 }
 .collections .collectionPrdts .allPrdts .collectionPrdt .prdtInfo .prdtPrices p span:nth-child(2) {
     font-size: 14px;
-    margin-right: 5px;
+    margin-left: 5px;
+    text-decoration: line-through;
+    color: rgb(192, 192, 192);
 }
 .collections .collectionPrdts .allPrdts .collectionPrdt .soldBtn{
     background-color: grey;
