--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -64,7 +64,7 @@ margin-bottom: 20px;
 }
 .footer .topFooter .topRight div button{
     height: 100%;
-    padding: 0 20px;
+    padding: 12px 20px;
     background-color: transparent;
     border-left: 2px solid black !important;
     border: none;
