--- a/components/admin/users/users.module.css
+++ b/components/admin/users/users.module.css
@@ -77,3 +77,17 @@
   display: flex;
   gap: 10px;
 }
+
+
+.usersContainer .export {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 40px;
+  margin-top: 10px;
+  justify-content: flex-end;
+}
+.usersContainer .export input{
+  width:100px;
+  height: 25px;
+}
