--- a/src/app/products/[pid]/singleProduct.module.css
+++ b/src/app/products/[pid]/singleProduct.module.css
@@ -398,6 +398,7 @@ margin-bottom: 20px;
         margin: 3rem 5px;
   }
       .relatedProductsPrdts{
+    grid-template-columns: 1fr;
     grid-gap:5px;
   }
 }
