--- a/src/app/category.module.css
+++ b/src/app/category.module.css
@@ -109,6 +109,8 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
+
 }
 .category .toggleCategory .toggle div:nth-child(1){
     border-right: 1px solid var(--heading-color);
